# cabal-graph

./: ChangeLog.md  cabal-graph.cabal  cabal-graph.org  cabal.project  common-upstream-eco.dot  local-eco.dot  readme.md  upstream-eco.dot
.github/workflows/: haskell-ci.yml
app/: eco.hs
src/: CabalFix.hs  CabalGraph.hs  CabalParse.hs
test/: doctests.hs
