cabal-version: 3.0
name: cabal-graph
version: 0.2.0.0
license: BSD-3-Clause
license-file: LICENSE
category: distribution
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/cabal-graph#readme
bug-reports: https://github.com/tonyday567/cabal-graph/issues
synopsis: Fix for cabal files.
description:
  A library to help explore the cabal archive file.

build-type: Simple
tested-with:
  ghc ==9.6.5
  ghc ==9.8.2
  ghc ==9.10.1

extra-doc-files:
  ChangeLog.md
  cabal-graph.org
  other/textdeps.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/cabal-graph

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

common ghc2021-stanza
  default-language: GHC2021

library
  import: ghc-options-stanza
  import: ghc2021-stanza
  hs-source-dirs: src
  build-depends:
    Cabal-syntax >=3.10 && <3.15,
    algebraic-graphs >=0.7 && <0.8,
    base >=4.14 && <5,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    directory >=1.3 && <1.4,
    dotparse >=0.1 && <0.2,
    flatparse >=0.3 && <0.6,
    optics-extra >=0.4 && <0.5,
    pretty >=1.1 && <1.2,
    string-interpolate >=0.3 && <0.4,
    tar >=0.5 && <0.7,
    vector >=0.13 && <0.14,

  exposed-modules:
    CabalFix
    CabalGraph
